fixing button lost text on mobile view

--- a/src/Components/css/Contact.css
+++ b/src/Components/css/Contact.css
@@ -40,6 +40,9 @@ form > input{
     border-left: none;
     border-right: none;
 }
+form > button:hover{
+    transform: scale(1.08);
+}
 .message{
     padding-left: 10px;
 }
